--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -7,5 +7,8 @@ DB_PASSWORD=123
 DB_NAME=postgres_auth
 
 JWT_SECRET=q1@3A!e5w6D6r8$90t*7876t5&4F4y3^3u2%uC1Sio2D34p6o7&8qp9*0l0Dn0^77m%k32Gl3$4d5s6!878xc9$0vc0Jv012@Kb4n4n6j7k8j9%0kK0lF7kj&&9uD6u4Ma2Jd21oS2E4dR6dc7v8*8v89bj9Y6a3s2d4^5h79j0O0k7k5l67%sv8P9ko2i$2i3l5o6@u!8K9u0u8Ld5d*1
-
 JWT_EXPIRATION=24
+
+CLIENT_ID=923050935039-77k9jvk0k34r9prrsmnmkvd01ft7mdil.apps.googleusercontent.com
+CLIENT_SECRET=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
+CALLBACK_URL=http://localhost:3001/auth/google/redirect
